分类功能提交

--- a/Public.UserManage.Web/Menu.Config
+++ b/Public.UserManage.Web/Menu.Config
@@ -1,13 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ArrayOfMenuModel>
 
-  <MenuModel Name="用户管理" Url="" Resource="" Operation="">
+  <MenuModel Name="用户管理" Url="~/User/SysUserList" Resource="" Operation="">
     <MenuList>
       <MenuModel Name="用户管理" Url="~/User/SysUserList"  Resource="website_manager" Operation="view"  />
       <MenuModel Name="角色管理" Url="~/Role/SysRoleList"  Resource="newstag_list" Operation="view"/>
       <!--<MenuModel Name="资源管理" Url="~/Template/TemplateList"  Resource="template_list" Operation="view" />
       <MenuModel Name="操作管理" Url="~/AuditLine/Index"  Resource="auditline_index" Operation="view"  />-->
      
+    </MenuList>
+  </MenuModel>
+
+
+  <MenuModel Name="分类管理" Url="~/Category/ContentCategory" Resource="" Operation="">
+    <MenuList>
+      <MenuModel Name="内容分类" Url="~/Category/ContentCategory"  Resource="aaaaa" Operation="view"  />
+    
+      <!--<MenuModel Name="资源管理" Url="~/Template/TemplateList"  Resource="template_list" Operation="view" />
+      <MenuModel Name="操作管理" Url="~/AuditLine/Index"  Resource="auditline_index" Operation="view"  />-->
+
     </MenuList>
   </MenuModel>
 </ArrayOfMenuModel> 
