--- a/Public.UserManage.Web/Menu.Config
+++ b/Public.UserManage.Web/Menu.Config
@@ -14,7 +14,8 @@
 
   <MenuModel Name="分类管理" Url="~/Category/ContentCategory" Resource="" Operation="">
     <MenuList>
-      <MenuModel Name="内容分类" Url="~/Category/ContentCategory"  Resource="aaaaa" Operation="view"  />
+      <MenuModel Name="站点管理" Url="~/WebSite/WebSiteList"  Resource="" Operation="view"  />
+      <MenuModel Name="内容分类" Url="~/Category/ContentCategory"  Resource="" Operation="view"  />
     
       <!--<MenuModel Name="资源管理" Url="~/Template/TemplateList"  Resource="template_list" Operation="view" />
       <MenuModel Name="操作管理" Url="~/AuditLine/Index"  Resource="auditline_index" Operation="view"  />-->
