--- a/Public.Model/Public.Model.csproj
+++ b/Public.Model/Public.Model.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Category\ContentCategoryModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebSite\WebSiteModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
